--- a/image/dockerfile
+++ b/image/dockerfile
@@ -1,61 +1,43 @@
 FROM ubuntu:16.04
 
-MAINTAINER mohit_sharma <mohit.sharma@nyu.edu>
+MAINTAINER Mohit_Sharma <mohit.sharma@nyu.edu>
 
-RUN apt-get update \
-  &&  apt-get install -y curl apt-utils git make build-essential            \
-              libssl-dev libffi-dev zlib1g-dev libbz2-dev libreadline-dev libcurl4-openssl-dev  \
-              libsqlite3-dev python-pip python3-pip libjpeg8-dev python-dev r-base \
-  && apt-get clean \
-  && rm -rf /var/lib/apt/lists/*
+# Update the index of available packages.
+RUN apt-get update
 
-RUN pip3 install --upgrade pip \
- && pip2 install --upgrade pip \
- && pip install numpy               \
- && pip install pillow              \
- && pip install matplotlib          \
- && pip install scikit-learn        \
- && pip install Pandas              \
- && pip install bokeh                \
- && pip install scipy                \
- && pip install Seaborn         \
- && pip3 install numpy          \
- && pip3 install pillow         \
- && pip3 install matplotlib     \
- && pip3 install scikit-learn   \
- && pip3 install Pandas         \
- && pip3 install bokeh          \
- && pip3 install scipy          \
- && pip3 install Seaborn        \
- && pip install ipython[all]    \
- && pip install jupyter         \
- && pip3 install ipykernel
+# Install the requires apt package and python.
+RUN apt-get install -y --no-install-recommends \
+      linux-headers-generic gcc build-essential python python-pip python-dev \
+      libffi-dev \
+      && \
+      apt-get clean
 
-RUN useradd -m -s /bin/bash -N -u 1000 ucsl17
+# Setup the ansible.
+RUN apt-get install -y --no-install-recommends \
+      python-software-properties software-properties-common
 
-COPY start-notebook.sh /usr/local/bin
-RUN chmod 755 /usr/local/bin/start-notebook.sh \
-    && chown -R ucsl17 /usr/local/bin/start-notebook.sh
+RUN add-apt-repository ppa:ansible/ansible -y && apt-get update
 
-RUN mkdir -p /home/ucsl17/.jupyter
-RUN (echo "c.NotebookApp.ip = '0.0.0.0'" && \
-     echo "c.NotebookApp.open_browser = False" && \
-     echo "from IPython.lib import passwd" && \
-     echo "import os" && \
-     echo "c.NotebookApp.password = passwd('Welcome1')") \
-     > /home/ucsl17/.jupyter/jupyter_notebook_config.py
+RUN apt-get install -y --no-install-recommends \
+      ansible \
+      && \
+      apt-get clean
 
+# for disable localhost warning message.
+RUN /bin/echo -e "[local]\nlocalhost ansible_connection=local" > /etc/ansible/hosts
 
-RUN python3 -m ipykernel install --user \
-    && ijs --ijs-install-kernel
+WORKDIR /home/notebooks
 
-RUN cp -rf /home/ucsl17/.local/share/jupyter/kernels/python3 /home/ucsl17/.local/share/jupyter/kernels/python2 \
-  &&  sed -i 's/python3/python/g' /home/ucsl17/.local/share/jupyter/kernels/python2/kernel.json \
-  &&  sed -i 's/Python 3/Python 2/g' /home/ucsl17/.local/share/jupyter/kernels/python2/kernel.json
+# Upgrade the pip to lastest.
+RUN pip install -U pip
 
+# Setup with Ansible.
+ADD https://raw.githubusercontent.com/hk1953/ucsl-image/master/image/jupyter.yml /home
+RUN ansible-playbook -vvvv /home/jupyter.yml
 
-VOLUME ["/home/ucsl17/notebooks"]
-WORKDIR /home/ucsl17
-ENV PASSWORD jupyter
-EXPOSE 8888
+# Run service of Jupyter.
+COPY start-notebook.sh /usr/local/bin/
+ENTRYPOINT [ "start-notebook.sh" ]
 
+# Print the version of jupyter that has been started
+CMD [ "jupyter", "--version" ]
