--- a/image/jupyter.yml
+++ b/image/jupyter.yml
@@ -50,10 +50,8 @@
 
   tasks:
     # Create a 2048-bit SSH key for root
-    - name: Generate SSH keys
-      shell: ssh-keygen -b 2048 -t rsa -f /root/.ssh/id_rsa -q -N ""
-      args:
-        creates: /root/.ssh/id_rsa
+    - name: create ssh key for root
+      user: name=root generate_ssh_key=yes ssh_key_bits=2048 ssh_key_file=.ssh/id_rsa
 
 
     # General Ubuntu package installation.
