--- a/image/dockerfile
+++ b/image/dockerfile
@@ -1,43 +1,191 @@
-FROM ubuntu:16.04
+FROM python:latest
 
 MAINTAINER Mohit_Sharma <mohit.sharma@nyu.edu>
 
-# Update the index of available packages.
-RUN apt-get update
+USER root
+ENV DEBIAN_FRONTEND noninteractive
 
-# Install the requires apt package and python.
-RUN apt-get install -y --no-install-recommends \
-      linux-headers-generic gcc build-essential python python-pip python-dev \
-      libffi-dev \
-      && \
-      apt-get clean
+RUN apt-get update && apt-get install -yq --no-install-recommends \
+    wget \
+    bzip2 \
+    ca-certificates \
+    sudo \
+    locales \
+    git \
+    vim \
+    jed \
+    emacs \
+    build-essential \
+    python-dev \
+    unzip \
+    libsm6 \
+    pandoc \
+    texlive-latex-base \
+    texlive-latex-extra \
+    texlive-fonts-extra \
+    texlive-fonts-recommended \
+    texlive-generic-recommended \
+    libxrender1 \
+    fonts-dejavu \
+    gfortran \
+    gcc \
+    libnetcdf-dev \
+    libhdf5-dev \
+    libproj-dev \
+    libgeos++-dev \
+    libgeos-dev \
+    && apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
-# Setup the ansible.
-RUN apt-get install -y --no-install-recommends \
-      python-software-properties software-properties-common
+RUN echo "en_US.UTF-8 UTF-8" > /etc/locale.gen && \
+    locale-gen
 
-RUN add-apt-repository ppa:ansible/ansible -y && apt-get update
+# Install Tini
+RUN wget --quiet https://github.com/krallin/tini/releases/download/v0.9.0/tini && \
+    echo "faafbfb5b079303691a939a747d7f60591f2143164093727e870b289a44d9872 *tini" | sha256sum -c - && \
+    mv tini /usr/local/bin/tini && \
+    chmod +x /usr/local/bin/tini
 
-RUN apt-get install -y --no-install-recommends \
-      ansible \
-      && \
-      apt-get clean
+# Configure environment
+ENV CONDA_DIR /opt/conda
+ENV PATH $CONDA_DIR/bin:$PATH
+ENV SHELL /bin/bash
+ENV NB_USER ucsl17_user
+ENV NB_UID 1000
+ENV HOME /home/$NB_USER
+ENV LC_ALL en_US.UTF-8
+ENV LANG en_US.UTF-8
+ENV LANGUAGE en_US.UTF-8
 
-# for disable localhost warning message.
-RUN /bin/echo -e "[local]\nlocalhost ansible_connection=local" > /etc/ansible/hosts
+# Create user with UID=1000 and in the 'users' group
+RUN useradd -m -s /bin/bash -N -u $NB_UID $NB_USER && \
+    mkdir -p $CONDA_DIR && \
+    chown $NB_USER $CONDA_DIR
 
-WORKDIR /home/notebooks
+USER $NB_USER
 
-# Upgrade the pip to lastest.
-RUN pip install -U pip
+# Setup home directory
+RUN mkdir /home/$NB_USER/work && \
+    mkdir /home/$NB_USER/.jupyter && \
+    mkdir -p -m 700 /home/$NB_USER/.local/share/jupyter && \
+    echo "cacert=/etc/ssl/certs/ca-certificates.crt" > /home/$NB_USER/.curlrc
 
-# Setup with Ansible.
-ADD https://raw.githubusercontent.com/hk1953/ucsl-image/master/image/jupyter.yml /home
-RUN ansible-playbook -vvvv /home/jupyter.yml
+# Install conda as NB_USER
+RUN cd /tmp && \
+    mkdir -p $CONDA_DIR && \
+    wget --quiet https://repo.continuum.io/miniconda/Miniconda3-4.3.11-Linux-x86_64.sh && \
+    echo "b9fe70ce7b6fa8df05abfb56995959b897d0365299f5046063bc236843474fb8 *Miniconda3-4.3.11-Linux-x86_64.sh" | sha256sum -c - && \
+    /bin/bash Miniconda3-4.3.11-Linux-x86_64.sh -f -b -p $CONDA_DIR && \
+    rm Miniconda3-4.3.11-Linux-x86_64.sh && \
+    $CONDA_DIR/bin/conda install --quiet --yes conda==4.3.11 && \
+    $CONDA_DIR/bin/conda config --system --add channels conda-forge && \
+    conda clean -tipsy
 
-# Run service of Jupyter.
+# Install JupyterHub to get the jupyterhub-singleuser startup script
+RUN pip --no-cache-dir install 'jupyterhub==0.5'
+
+# Install Python 3 packages
+# Remove pyqt and qt pulled in for matplotlib since we're only ever going to
+# use notebook-friendly backends in these images
+RUN conda install --quiet --yes \
+#    'pandas=0.18*' \
+#    'numexpr=2.5*' \
+#    'matplotlib=1.5*' \
+#    'scipy=0.17*' \
+#    'seaborn=0.7*' \
+#    'scikit-learn=0.17*' \
+#    'scikit-image=0.11*' \
+#    'sympy=1.0*' \
+#    'patsy=0.4*' \
+#    'statsmodels=0.6*' \
+#    'cloudpickle=0.1*' \
+#    'dill=0.2*' \
+#    'numba=0.23*' \
+#    'bokeh=0.11*' \
+#    'h5py=2.5*' && \
+    'cython' \
+    'numpy' \
+    'pillow' \
+    'matplotlib' \
+    'scipy' \
+    'pandas' && \
+    conda install -c conda-forge ipywidgets && \
+    conda remove --quiet --yes --force qt pyqt && \
+    conda clean -tipsy
+
+# Activate ipywidgets extension in the environment that runs the notebook server
+RUN jupyter nbextension enable --py widgetsnbextension --sys-prefix
+
+# Install Python 2 packages
+# Remove pyqt and qt pulled in for matplotlib since we're only ever going to
+# use notebook-friendly backends in these images
+RUN conda create --quiet --yes -p $CONDA_DIR/envs/python2 python=2.7 \
+#    'ipython=4.2*' \
+#    'pandas=0.18*' \
+#    'numexpr=2.5*' \
+#    'matplotlib=1.5*' \
+#    'scipy=0.17*' \
+#    'seaborn=0.7*' \
+#    'scikit-learn=0.17*' \
+#    'scikit-image=0.11*' \
+#    'sympy=1.0*' \
+#    'patsy=0.4*' \
+#    'statsmodels=0.6*' \
+#    'cloudpickle=0.1*' \
+#    'dill=0.2*' \
+#    'numba=0.23*' \
+#    'bokeh=0.11*' \
+#    'h5py=2.5*' \
+#    'pyzmq' && \
+    'cython' \
+    'numpy' \
+    'pillow' \
+    'matplotlib' \
+    'scipy' \
+    'pandas' && \
+    conda install -c conda-forge -p $CONDA_DIR/envs/python2 python=2.7 ipywidgets && \
+    conda remove -n python2 --quiet --yes --force qt pyqt && \
+    conda clean -tipsy
+
+# Add shortcuts to distinguish pip for python2 and python3 envs
+RUN ln -s $CONDA_DIR/envs/python2/bin/pip $CONDA_DIR/bin/pip2 && \
+    ln -s $CONDA_DIR/bin/pip $CONDA_DIR/bin/pip3
+
+# Configure ipython kernel to use matplotlib inline backend by default
+RUN mkdir -p $HOME/.ipython/profile_default/startup
+#COPY mplimporthook.py $HOME/.ipython/profile_default/startup/
+
+# Install Jupyter notebook as NB_USER
+RUN conda install --quiet --yes \
+    'notebook=4.2*' \
+    && conda clean -tipsy
+
+# Install JupyterHub to get the jupyterhub-singleuser startup script
+RUN pip --no-cache-dir install 'jupyterhub==0.5'
+
+USER root
+
+# Install Python 2 kernel spec globally to avoid permission problems when NB_UID
+# switching at runtime.
+RUN $CONDA_DIR/envs/python2/bin/python -m ipykernel install
+
+# Configure container startup as root
+EXPOSE 8888
+WORKDIR /home/$NB_USER/work
+ENTRYPOINT ["tini", "--"]
+CMD ["start-notebook.sh"]
+
+# Add local files as late as possible to avoid cache busting
+COPY start.sh /usr/local/bin/
 COPY start-notebook.sh /usr/local/bin/
-ENTRYPOINT [ "start-notebook.sh" ]
+COPY start-singleuser.sh /usr/local/bin/
+COPY jupyter_notebook_config.py /home/$NB_USER/.jupyter/
+RUN chown -R $NB_USER:users /home/$NB_USER/.jupyter
+RUN chmod +x /usr/local/bin/start-*
 
-# Print the version of jupyter that has been started
-CMD [ "jupyter", "--version" ]
+# Add any extra requirements. Done at end to avoid cache busting.
+ADD requirements.txt requirements.txt
+RUN pip install -r requirements.txt
+RUN pip3 install -r requirements.txt
+
+USER $NB_USER
