--- a/image/docker-compose.yml
+++ b/image/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       context: .
       args:
         NB_USER: ${NB_USER}
+    image: mohitsharma44/ucsl-image:latest
     ports:
       - "8888:8888"
     volumes:
